--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "lint": "eslint bin/brunch lib test",
     "lint:fix": "eslint --fix bin/brunch lib test",
-    "test": "npm run lint && LOGGY_STACKS=1 ava -s --verbose --fail-fast",
+    "test": "npm run lint && set LOGGY_STACKS=1 && ava -s --verbose --fail-fast",
     "test:coverage": "nyc ava -s && nyc report --reporter=html"
   },
   "engines": {
@@ -50,37 +50,37 @@
   "dependencies": {
     "anymatch": "^2.0",
     "anysort": "~1.0",
-    "check-dependencies": "~1.0.1",
+    "check-dependencies": "~1.1.0",
     "chokidar": "^2",
-    "coffeescript": "~1.12.7",
-    "commander": "~2.9",
+    "coffeescript": "~2.3.1",
+    "commander": "~2.18",
     "commonjs-require-definition": "~0.6.2",
     "deppack": "~0.8",
-    "debug": "^3.1.0",
+    "debug": "^4.0.1",
     "deps-install": "~0.1",
     "fcache": "~0.3",
     "init-skeleton": "~1.0",
-    "loggy": "~1.0.3",
+    "loggy": "~1.0.4",
     "micro-es7-shim": "^0.1",
     "micro-promisify": "~0.1",
     "mkdirp": "~0.5",
-    "promise.prototype.finally": "^2",
+    "promise.prototype.finally": "^3.1.0",
     "read-components": "~0.7",
     "serve-brunch": "~0.2",
     "since-app-start": "~0.3",
     "skemata": "~0.1",
-    "source-map": "~0.5",
+    "source-map": "~0.7.3",
     "universal-path": "^0.1"
   },
   "devDependencies": {
-    "ava": "~0.16",
-    "eslint": "^3",
+    "ava": "~0.25",
+    "eslint": "^3.14.1",
     "eslint-config-brunch": "^1",
-    "fixturify": "^0.2",
+    "fixturify": "^0.3.4",
     "fs-extra": "^0.30",
     "nyc": "^13.0.0",
-    "rewire": "^2.5",
-    "test-console": "^1"
+    "rewire": "^4.0",
+    "test-console": "^1.1"
   },
   "eslintConfig": {
     "extends": "brunch"
