--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "lint": "eslint bin/brunch lib test",
     "lint:fix": "eslint --fix bin/brunch lib test",
-    "test": "npm run lint && set LOGGY_STACKS=1 && ava -s --verbose --fail-fast",
+    "test": "npm run lint && LOGGY_STACKS=1 ava -s --verbose --fail-fast",
     "test:coverage": "nyc ava -s && nyc report --reporter=html"
   },
   "engines": {
@@ -52,7 +52,7 @@
     "anysort": "~1.0",
     "check-dependencies": "~1.0.1",
     "chokidar": "^2",
-    "coffeescript": "~2.3.1",
+    "coffeescript": "~1.12.7",
     "commander": "~2.9",
     "commonjs-require-definition": "~0.6.2",
     "deppack": "~0.8",
@@ -73,14 +73,14 @@
     "universal-path": "^0.1"
   },
   "devDependencies": {
-    "ava": "~0.25",
+    "ava": "~0.16",
     "eslint": "^3",
     "eslint-config-brunch": "^1",
     "fixturify": "^0.2",
     "fs-extra": "^0.30",
     "nyc": "^13.0.0",
     "rewire": "^2.5",
-    "test-console": "^1.1"
+    "test-console": "^1"
   },
   "eslintConfig": {
     "extends": "brunch"
